responsive design tablet&desktop

--- a/style.css
+++ b/style.css
@@ -45,6 +45,24 @@ h1 span {
 img {
   display: block;
 }
+p {
+  font-size: 15px;
+  line-height: 25px;
+  text-align: center;
+  color: var(--very-light-blue);
+}
+.container {
+  display: flex;
+  justify-content: space-between;
+}
+.container img {
+  width: 15%;
+}
+::placeholder {
+  font-weight: bold;
+  font-size: 14px;
+  opacity: 0.5;
+}
 @media (min-width: 375px) {
   body {
     padding: 50px 15px;
@@ -56,6 +74,7 @@ img {
     right: 0;
     background-image: url(assets/mobile/image-host.jpg);
     opacity: 0.1;
+    background-size: contain;
   }
   main {
     width: 327px;
@@ -71,5 +90,115 @@ img {
   .logo {
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 74px;
+  }
+  .container {
+    margin: 52px 0;
+  }
+  #email {
+    width: 100%;
+    height: 46px;
+    padding-left: 32px;
+    background-color: var(--dark-blue);
+    border-radius: 28px;
+    border: 0px;
+  }
+  #submit {
+    width: 100%;
+    height: 46px;
+    border-radius: 28px;
+    background-color: var(--light-green);
+    border: 0;
+    box-shadow: 0px 25px 20px rgba(84, 230, 175, 0.2);
+  }
+  .dots {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  body {
+    padding: 50px 15px;
+  }
+  body::after {
+    left: 40%;
+    background-image: url(assets/tablet/image-host.jpg);
+    opacity: 1;
+  }
+  main {
+    position: relative;
+    width: 635px;
+    height: 509px;
+    margin-top: 100px;
+    padding-top: 93px;
+    margin-left: 39px;
+    background-color: var(--very-dark-blue);
+  }
+  h1 {
+    margin: 0;
+    padding: 0px;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: left;
+  }
+  .logo {
+    display: inline;
+    margin-left: 39px;
+  }
+  main p {
+    width: 75%;
+    text-align: left;
+  }
+  .container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 52px 0;
+  }
+  form {
+    position: relative;
+  }
+  #email {
+    width: 67%;
+    height: 56px;
+    padding-left: 32px;
+    background-color: var(--dark-blue);
+    border-radius: 28px;
+    border: 0px;
+  }
+  #submit {
+    width: 25%;
+    height: 46px;
+    position: absolute;
+    top: 0;
+    left: 41%;
+    margin-top: 5px;
+    border-radius: 28px;
+    background-color: var(--light-green);
+    border: 0;
+    box-shadow: 0px 25px 20px rgba(84, 230, 175, 0.2);
+  }
+  .dots {
+    display: block;
+    position: absolute;
+    bottom: 0%;
+    margin-left: 24px;
+  }
+}
+@media (min-width: 1440px) {
+  body {
+    width: 1275px;
+    margin-left: 165px;
+    padding-right: 0;
+  }
+  body::after {
+    background-image: url(assets/desktop/image-host.jpg);
+    top: 20%;
+    right: 0%;
+    opacity: 0.8;
+  }
+  .dots {
+    right: 0;
+    bottom: 13%;
   }
 }
